syntax = "proto3";

package inf.auth;
option go_package = "github.com/influenzanet/study-service/pkg/api";

message TokenInfos {
  string id = 1; // User id
  string instance_id =
      2; // To which instance/country/high level group/ does the user belongs to
  int64 issued_at = 3;             // time of token generation in posix time
  map<string, string> payload = 4; // optional infos, e.g., role(s)
  string profil_id = 5;            // which subprofile of the user is selected
  bool account_confirmed = 6;      // e.g. if user verified email, phone address
  repeated string other_profile_ids = 8;
}